src/modules/notify/skin/notify.less
.notify-panel
{
    -moz-appearance: none !important;
    transform: none !important;
    transition: none !important;
    -moz-binding: url("chrome://global/content/bindings/popup.xml#panel") !important;
    padding: 6px;
    color: #EEE;
    background: rgb(34, 34, 34);
    border-radius: 2px;
    border: 1px solid rgba(150,150,150, 0.2);
    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
    
    &, *
    {
        -moz-user-focus: normal;
    }

    &.p-notification
    {
        background-color: rgb(81, 79, 117);
    }

    &.p-warning
    {
        background-color: rgb(107, 94, 56);
    }

    &.p-error
    {
        background-color: rgb(114, 78, 78);
    }
    
    &.p-now
    {
        background-color: rgb(58, 58, 58);
    }
    
    &.lint, &.generic
    {
        padding: 4px;
        font-size: 0.9rem;
        
        description
        {
            max-width: 350px !important;
        }
    }
    
    &.lint
    {
        button.menu
        {
            visibility: collapse;
        }
    }

    &.clickable description
    {
        cursor: pointer;
        
        &:hover
        {
            text-decoration: underline;
        }
    }

    description
    {
        max-width: 500px;
        margin-right: 25px;
    }

    button
    {
        -moz-appearance: none;
        margin: 0 6px;
        background: transparent;
        border: 0 !important;
        min-height: 0 !important;
        min-width: 0 !important;
        width: 16px;
        height: 16px;
        opacity: 0.7;
        cursor: pointer;
        transition: all 0.2s ease;
        background-size: 16px !important;
        background-repeat: no-repeat;
        background-position: center;

        dropmarker
        {
            visibility: collapse;
        }

        &:hover
        {
            opacity: 1.0;
        }

        &, &:hover
        {
            &.menu
            {
                background-image: url(koicon://ko-svg/chrome/icomoon/skin/cog2.svg?preset=hud) !important;
            }
    
            &.undo
            {
                background-image: url(koicon://ko-svg/chrome/icomoon/skin/undo2.svg?preset=hud) !important;
            }
            
            &.close
            {
                background-image: url(koicon://ko-svg/chrome/icomoon/skin/close2.svg?preset=hud) !important;
            }
        }
    }


}

